--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ h4{
     border: 2px solid white!important;
     padding: 6px 13px 7px 22px;
 }
-.fas,.fa-book-open{
+.fa-book-open{
     padding-left: 14px;
     border: 3px solid white;
     padding: 5px 14px 7px 14px;
