--- a/style.css
+++ b/style.css
@@ -14,16 +14,19 @@ h4{
     margin-bottom: 40px;
 }
 .fa-book-open{
-    font-size: 28px;
+    font-size: 24px;
 }
 
 .border{
-    border: 2px solid white!important;
-    padding: 6px 13px 7px 22px;
+    padding: 5px 13px 6px 22px;
 }
 .fa-book-open{
-    padding-left: 14px;
-    border: 3px solid white;
     padding: 5px 14px 7px 14px;
-    border-left: 3px;
+    border-left: 1px;
+}
+.row {
+    display: -webkit-box;
+}
+.card{
+    padding: 6px
 }
